Refactor: 리스트 재사용하지 않으므로 .toList()로 변경